# agentic-travel-assistant

./: .env.example  Dockerfile  README.md  docker-compose.yml  init-db.sh  main.py  pyproject.toml
.devcontainer/: devcontainer.json
evals/: eval_retriever.py
notebook/: 1-eda.ipynb  2-text2sql.ipynb  3-RAG-preprocessing.ipynb  4-evaluation-dataset.ipynb  5-sql-similarity-search.ipynb
src/chatbot_ui/: retrieval.py  streamlit_app.py
src/chatbot_ui/core/: config.py
